--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="reflex">
+    <wb-module deploy-name="reflex_test">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="reflex"/>
-        <property name="java-output-path" value="/reflex/WebContent/WEB-INF/classes"/>
+        <property name="java-output-path" value="/reflex_test/WebContent/WEB-INF/classes"/>
+        <property name="context-root" value="reflex_test"/>
     </wb-module>
 </project-modules>
